--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
-
+    <div>hello world</div>
 
     <input type="text" id="searchInput" placeholder="Search Pokémon by name or type" />
     <div id="results"></div>
